# MultilingualCLTs

./: LICENSE  README.md  pyproject.toml
cluster_stuff/: long_interactive_job.sub
example/generate_activations/: run_activations.py  run_activations.sh  run_activations.sub
example/gpt2/: run_on_gpt2.py  run_on_gpt2.sh  run_on_gpt2.sub
example/gpt2_finetune/: run_on_gpt2_finetune.py  run_on_gpt2_finetune.sh  run_on_gpt2_finetune.sub
example/gpt2_multilingual/: run_on_gpt2_multi.py  run_on_gpt2_multi.sh  run_on_gpt2_multi.sub
example/gpt2_multilingual_20/: run_on_gpt2_multi_20.py  run_on_gpt2_multi_20.sh  run_on_gpt2_multi_20.sub
example/graph/: run_aggreg_graph.py  run_graph.py  run_graph.sh  run_graph.sub  run_graph20.py  run_graph50.py  run_graph90.py  run_graph_cat.py  strength_log_feat_20.py  strength_log_feat_50.py
example/graph_langvec/: run_graph_langvec.py  run_graph_langvec.sh  run_graph_langvec.sub
example/single_gpu_test/: run_activations_single.py  run_on_tiny_stories_single.py  run_on_tiny_stories_single.sh  run_on_tiny_stories_single.sub
example/tiny_stories/: run_on_tiny_stories.py  run_on_tiny_stories.sh  run_on_tiny_stories.sub
example/tiny_stories_finetune/: run_on_tiny_stories_finetune.py  run_on_tiny_stories_finetune.sh  run_on_tiny_stories_finetune.sub
src/featflow/: clt.py  clt_training_runner.py  llama_clt.py  llama_mse.py  load_model.py  utils.py
tests/: conftest.py  test_clt.py  test_clt_training_runner.py  test_load_model.py  test_run_ddp.py  test_run_sfdp.py  utils.py
tests/autointerp/: test_client.py  test_pipeline.py
(+165 files in other folders)
